Fixed text not wrapping on mobile in details page

--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -69,6 +69,10 @@
         flex-direction: column;
         line-height: 2.2;
 
+        &__col-1 {
+          white-space: pre-wrap;
+        }
+
         &__col-2 {
           &__languages {
             line-height: 2;
