--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -39,6 +39,7 @@ html {
   overflow-x: hidden;
   overflow-y: scroll;
   height: 100%;
+  scrollbar-color: var(--scrollbar-color);
 }
 
 body {
